# deadlinetaskbot

./: README.md  main.py  pyproject.toml  requirements.txt
Nginx/conf.d/: deadlinetaskbot.conf
Nginx/nginx/: 213.171.10.228.self.crt  213.171.10.228.self.key
Systemd/: deadlinetaskbot.service
